ex2-techup-chatroom/style.css
body {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

header {
  width: 100%;
  padding: 16px 16px;
  background-color: #808080;
  color: #fff;
  font-size: 24px;
}

section#chat-container {
  display: flex;
  flex-direction: column;
  gap: 24px;
  padding: 16px;
}

.mychat-container {
  display: flex;
  justify-content: end;
}

.chat-bubble {
  width: 300px;
  padding: 16px 16px;
  border-radius: 30px;
  font-size: 18px;
  position: relative;
}

.chat-bubble p {
  position: relative;
  z-index: 2;
  margin: 0px;
  padding: 0px;
}

.mychat {
  background-color: #0bbe06;
}

.mychat-tail {
  position: absolute;
  top: -20px;
  right: 0px;
  width: 40px;
  height: 40px;
  transform: rotate(30deg);
  border-radius: 50%;
  box-shadow: 8px 8px 0px #0bbe06;
  z-index: 1;
}

.cancel {
  background-color: #e8e3e3;
  position: relative;
}

.friend-chat {
  background-color: #808080;
}

button.cancel-btn {
  color: #fff;
  font-size: 14px;
  background-color: #808080;
  border-radius: 50%;
  width: 24px;
  height: 24px;
  border: none;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: center;
  position: absolute;
}

